--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <h1>WingedMolotov 🍾🔥🪽</h1>
+    <header id="header">
+      <h1>WingedMolotov | 🍾🔥🪽</h1>
+    </header>
     <p>Hello! This site is a work in progress.</p>
     <h2>About me</h2>
     <p>I am a young tech enthusiast located in Minnesota!</p>
@@ -15,9 +17,11 @@
     </p>
     <a href="https://github.com/WingedMolotov/stellaritext"><p>Repo</p></a>
     <a href="https://wingedmolotov.github.io/stellaritext/"><p>Link</p></a>
-    <p><b>Astral PCs</b>
+    <p><b>Astral PCs</b><br/>
       I build PCs as a hobby!
     </p>
     <a href="https://sites.google.com/view/astralpcs">Link</a>
+    <h2>Contact</h2>
+    <p>By Discord: <em>@wingedmolotov</em></p>
   </body>
 </html>
