--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header id="header">
       <h1>WingedMolotov | 🍾🔥🪽</h1>
     </header>
-    <p>Hello! This site is a work in progress.</p>
+    <p>Hello! This site is a work ina progress.</p>
     <h2>About me</h2>
     <p>I am a young tech enthusiast located in Minnesota!</p>
     <h2>Projects</h2>
