--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <header id="header">
+    <header id="topbar">
       <h1>WingedMolotov | 🍾🔥🪽</h1>
     </header>
-    <p>Hello! This site is a work ina progress.</p>
+    <p>Hello! This site is a work in progress.</p>
     <h2>About me</h2>
     <p>I am a young tech enthusiast located in Minnesota!</p>
     <h2>Projects</h2>
