--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WingedMolotov 🍾🔥🪽</title>
+    <title>WingedMolotov | 🍾🔥🪽</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <header id="topbar">
-      <h1>WingedMolotov | 🍾🔥🪽</h1>
+      <h1 id="topbar-text">WingedMolotov | 🍾🔥🪽</h1>
     </header>
     <p>Hello! This site is a work in progress.</p>
     <h2>About me</h2>
