--- a/index.html
+++ b/index.html
@@ -1,37 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WingedMolotov | 🍾🔥🪽</title>
+    <title>Dustin Nguyen | WingedMolotov</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <header id="topbar">
-      <h1 id="topbar-text">WingedMolotov | 🍾🔥🪽</h1>
-    </header>
-    <p>Hello! This site is a work in progress.</p>
-    <div>
-      <h2>About me</h2>
-      <p>I am a young tech enthusiast located in Minnesota!</p>
+    <div id="main-box">
+      <p>Hi 👋</p>
     </div>
-    <div>
-      <h2>Projects</h2>
-      <div class="project">
-        <p><b>StellariText</b><br/>
-          Text-based space explorer. I develop when I feel like it!
-        </p>
-        <a href="https://github.com/WingedMolotov/stellaritext"><p>Repo</p></a>
-        <a href="https://wingedmolotov.github.io/stellaritext/"><p>Link</p></a>
-      </div>
-      <div class="project">
-        <p><b>Astral PCs</b><br/>
-          I build PCs as a hobby!
-        </p>
-        <a href="https://sites.google.com/view/astralpcs">Link</a>
-      </div>
-    </div>
-    <div>
-      <h2>Contact</h2>
-      <p>By Discord: <em>@wingedmolotov</em></p>
+    <div id="jockeywa">
+      <p> awiod</p>
     </div>
   </body>
 </html>
