made the website

--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dustin Nguyen | WingedMolotov</title>
+    <title>wingedmolotov</title>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" href="images/favicon.ico"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6beeff61e1.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="main-box">
-      <p>Hi 👋</p>
+      <div>  
+        <p id="first">Hello, I'm <span>wingedmolotov</span>👋</p>
+        <p id="second">I'm a 14-year-old from <a href="https://www.google.com/maps/place/Bloomington,+MN/">Minnesota</a> who loves cities, programming, and music</p>
+      </div>
+      <img src="images/normandale.png"/>
     </div>
-    <div id="jockeywa">
-      <p> awiod</p>
+    <div id="icons">
+      <i class="fa-solid fa-camera"></i>
     </div>
   </body>
 </html>
