--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <p id="first">Hello, I'm <span>wingedmolotov</span>👋</p>
         <p id="second">I'm a 14-year-old from <a href="https://www.google.com/maps/place/Bloomington,+MN/">Minnesota</a> who loves cities, programming, and music</p>
       </div>
-      <img src="images/normandale.png"/>
-    </div>
-    <div id="icons">
-      <i class="fa-solid fa-camera"></i>
+      <div id="icons">
+        <i class="fa-solid fa-camera"></i>
+      </div>
+      <img src="images/normandale.PNG"/>
     </div>
   </body>
 </html>
