--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         <p id="second">I'm a 14-year-old from <a href="https://www.google.com/maps/place/Bloomington,+MN/">Minnesota</a> who loves cities, programming, and music</p>
       </div>
       <div id="icons">
-        <i class="fa-solid fa-camera"></i>
+        <a href="mailto:nguyenb.dustin@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+        <a href="https://github.com/WingedMolotov" target="_blank"><i class="fa-solid fa-github"></i></a>
+        <a href="https://bsky.app/profile/wingedmolotov.org" target="_blank"><i class="fa-solid fa-bluesky"></i></a>
+        <a href="https://discord.com/users/669384112275980298" target="_blank"><i class="fa-solid fa-discord" ></i></a>
       </div>
       <img src="images/normandale.PNG"/>
     </div>
