--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </div>
       <div id="icons">
         <a href="mailto:nguyenb.dustin@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
-        <a href="https://github.com/WingedMolotov" target="_blank"><i class="fa-solid fa-github"></i></a>
-        <a href="https://bsky.app/profile/wingedmolotov.org" target="_blank"><i class="fa-solid fa-bluesky"></i></a>
-        <a href="https://discord.com/users/669384112275980298" target="_blank"><i class="fa-solid fa-discord" ></i></a>
+        <a href="https://github.com/WingedMolotov" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://bsky.app/profile/wingedmolotov.org" target="_blank"><i class="fa-brands fa-bluesky"></i></a>
+        <a href="https://discord.com/users/669384112275980298" target="_blank"><i class="fa-brands fa-discord" ></i></a>
       </div>
       <img src="images/normandale.PNG"/>
     </div>
