--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="main-box">
       <div>  
         <p id="first">Hello, I'm <span>wingedmolotov</span>👋</p>
-        <p id="second">I'm a 14-year-old from <a href="https://www.google.com/maps/place/Bloomington,+MN/">Minnesota</a> who loves cities, programming, and music</p>
+        <p id="second">14 year old <a href="https://www.google.com/maps/place/Bloomington,+MN/">Minnesota</a> urbanist and programmer</p>
       </div>
       <div id="icons">
         <a href="mailto:nguyenb.dustin@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
