--- a/new/index.html
+++ b/new/index.html
@@ -11,26 +11,32 @@
   </head>
   <body>
     <div id="header-container">
-        <header>
-            <h1>winged<span class="red">molotov</span></h1>
-        </header>
+      <header>
+        <h1>winged<span class="red">molotov</span></h1>
+      </header>
     </div>
     <div id="cool-line-thing"></div>
     <div id="aboutme">
-        <h2>About me</h2>
-        <p>Hi, I'm <b><span class="red">wingedmolotov</span></b> (Dustin). I'm a high schooler in Bloomington, Minnesota. I like land use, urban transportation, music, and programming.</p>
+      <h2>About me</h2>
+      <p>Hi, I'm <b><span class="red">wingedmolotov</span></b> (Dustin). I'm a high schooler in Bloomington, Minnesota. I like land use, urban transportation, music, and programming.</p>
     </div>
     <div id="projects-container">
-        <h2>Projects</h2>
-        <div id="projects">
-            <div class="project" id="p1">
-                <h3>ImpactGREEN</h3>
-                <p>A simple personal sustainability tool, packaged in a gamified experience<br>Made for Hack Club's High Seas</p>
-            </div>
-            <div class="project" id="p2">
-                <h3>Bicycle Parking Map</h3>
-            </div>
+      <h2>Projects</h2>
+      <div id="projects">
+        <div class="project" id="p1">
+          <h3>ImpactGREEN</h3>
+          <p>A simple personal sustainability tool, packaged in a gamified experience<br>Made for Hack Club's High Seas</p>
         </div>
+        <div class="project" id="p2">
+          <h3>Bicycle Parking Map</h3>
+        </div>
+      </div>
     </div>
+    <div id="icons">
+        <a href="mailto:nguyenb.dustin@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+        <a href="https://github.com/WingedMolotov" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://bsky.app/profile/wingedmolotov.org" target="_blank"><i class="fa-brands fa-bluesky"></i></a>
+        <a href="https://discord.com/users/669384112275980298" target="_blank"><i class="fa-brands fa-discord" ></i></a>
+      </div>
   </body>
 </html>
