--- a/new/index.html
+++ b/new/index.html
@@ -24,11 +24,18 @@
       <h2>Projects</h2>
       <div id="projects">
         <div class="project" id="p1">
-          <h3>ImpactGREEN</h3>
+          <h3>
+            ImpactGREEN
+            <a href="mailto:nguyenb.dustin@gmail.com" target="_blank"><i class="fa-solid fa-link"></i></a>
+            <a href="mailto:nguyenb.dustin@gmail.com" target="_blank"><i class="fa-brands fa-github"></i></a>
+          </h3>
           <p>A simple personal sustainability tool, packaged in a gamified experience<br>Made for Hack Club's High Seas</p>
         </div>
         <div class="project" id="p2">
           <h3>Bicycle Parking Map</h3>
+        </div>
+        <div class="project" id="p3">
+          <h3>Bloomington's New Vision For Southtown Shopping Center</h3>
         </div>
       </div>
     </div>
