--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div id="icons">
       <a href="mailto:hello@wingedmolotov.org" target="_blank"><i class="fa-solid fa-envelope"></i></a>
       <a href="https://github.com/WingedMolotov" target="_blank"><i class="fa-brands fa-github"></i></a>
-      <a href="https://en.wikipedia.org/wiki/NotDragonius" target="_blank"><i class="fa-brands fa-wikipedia-w"></i></a>
+      <a href="https://en.wikipedia.org/wiki/User:NotDragonius" target="_blank"><i class="fa-brands fa-wikipedia-w"></i></a>
     </div>
   </body>
 </html>
